--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-progress": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.2",
-    "@tanstack/react-query": "^5.62.2",
+    "@tanstack/react-query": "^5.62.11",
+    "@tanstack/react-query-devtools": "^5.62.11",
     "axios": "^1.7.8",
     "chart.js": "^4.4.7",
     "class-variance-authority": "^0.7.1",
